clusters/west-or-pdx-101/heartbeat/heartbeat/ingressHttps.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heartbeat
  namespace: heartbeat
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"

spec:
  tls:
  - secretName: heartbeat
    hosts:
    - west-or-pdx-101.cseretail.com
  rules:
  - host: west-or-pdx-101.cseretail.com
    http:
      paths:
      - pathType: Prefix
        path: /heartbeat
        backend:
          service:
            name: heartbeat
            port:
              number: 8080
